# Snake-The-Game

./: .gitignore  CMakeLists.txt  main.cpp
Files/: gameres.rc
SnakeFun/: Snake.cpp  Snake.h
src/Block/: Block.h
src/Consts/: Consts.h
src/Fruit/: BigFruit.h  Fruit.h
src/Game/: Game.cpp  Game.h  Snake.cpp  Snake.h  StartMenu.cpp  StartMenu.h
src/Snake/: Snake.cpp  Snake.h
